--- a/index.html
+++ b/index.html
@@ -1,9 +1,193 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>didar</title>
+  <meta charset="UTF-8" />
+  <title>Abu Bakr Didar</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <style>
+    :root {
+      --bg: #0f0f0f;
+      --fg: #eaeaea;
+      --muted: #9a9a9a;
+      --card: #141414;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      min-height: 100vh;
+      background: radial-gradient(circle at top, #151515, var(--bg));
+      color: var(--fg);
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+    }
+
+    .card {
+      text-align: center;
+      padding: 2.75rem 2.2rem;
+      max-width: 420px;
+      width: 100%;
+      background: transparent;
+      animation: enter 0.9s ease-out both;
+    }
+
+    @keyframes enter {
+      from {
+        opacity: 0;
+        transform: translateY(16px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .avatar {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 1.3rem;
+      border: 2px solid #222;
+      animation: breathe 6s ease-in-out infinite;
+    }
+
+    @keyframes breathe {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.015); }
+    }
+
+    h1 {
+      margin: 0;
+      font-size: 1.6rem;
+      font-weight: 600;
+      letter-spacing: 0.01em;
+    }
+
+    .role {
+      margin-top: 0.45rem;
+      color: var(--muted);
+      font-size: 0.95rem;
+      letter-spacing: 0.05em;
+      text-transform: lowercase;
+    }
+
+    .links {
+      margin-top: 2.2rem;
+      display: flex;
+      justify-content: center;
+      gap: 1.3rem;
+    }
+
+    .links a {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .icon {
+      width: 28px;
+      height: 28px;
+      fill: #b5b5b5;
+      transition:
+        fill 0.25s ease,
+        transform 0.25s ease,
+        filter 0.25s ease;
+    }
+
+    .links a:hover .icon {
+      transform: translateY(-3px) scale(1.05);
+      filter: drop-shadow(0 4px 10px rgba(0,0,0,0.4));
+    }
+
+    .links a:active .icon {
+      transform: translateY(-1px) scale(0.97);
+    }
+
+    /* Brand hover colors */
+    .github:hover .icon { fill: #ffffff; }
+    .x:hover .icon { fill: #1da1f2; }
+    .facebook:hover .icon { fill: #1877f2; }
+    .linkedin:hover .icon { fill: #0a66c2; }
+
+    .instagram:hover .icon {
+      fill: url(#ig-gradient);
+    }
+
+    footer {
+      margin-top: 2.3rem;
+      font-size: 0.75rem;
+      color: #666;
+      opacity: 0;
+      animation: fadeIn 1s ease forwards;
+      animation-delay: 0.6s;
+    }
+
+    @keyframes fadeIn {
+      to { opacity: 1; }
+    }
+  </style>
 </head>
 <body>
-<h1>da dadad daa ad adadadadada</h1>
+
+  <div class="card">
+    <img src="avatar.jpg" alt="Avatar" class="avatar" />
+
+    <h1>Abu Bakr Didar</h1>
+    <div class="role">software developer</div>
+
+    <div class="links">
+      <!-- GitHub -->
+      <a class="github" href="https://github.com/didar" target="_blank" aria-label="GitHub">
+        <svg class="icon" viewBox="0 0 24 24">
+          <path d="M12 .5C5.7.5.5 5.7.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.3.8-.6v-2c-3.2.7-3.9-1.4-3.9-1.4-.5-1.2-1.2-1.5-1.2-1.5-1-.7.1-.7.1-.7 1.1.1 1.7 1.1 1.7 1.1 1 .1.8 1.7 2.6 1.2.1-.7.4-1.2.7-1.5-2.6-.3-5.3-1.3-5.3-5.9 0-1.3.5-2.4 1.1-3.2-.1-.3-.5-1.4.1-2.9 0 0 .9-.3 3 .1.9-.3 1.8-.4 2.7-.4.9 0 1.8.1 2.7.4 2.1-.4 3-.1 3-.1.6 1.5.2 2.6.1 2.9.7.8 1.1 1.9 1.1 3.2 0 4.6-2.7 5.6-5.3 5.9.4.3.8 1 .8 2v3c0 .3.2.7.8.6 4.6-1.5 7.9-5.8 7.9-10.9C23.5 5.7 18.3.5 12 .5z"/>
+        </svg>
+      </a>
+
+      <!-- X -->
+      <a class="x" href="https://x.com/__didar" target="_blank" aria-label="X">
+        <svg class="icon" viewBox="0 0 24 24">
+          <path d="M18.9 2H22l-7.2 8.3L23 22h-6.4l-5-6.6L6 22H3l7.7-8.9L1 2h6.6l4.5 6L18.9 2z"/>
+        </svg>
+      </a>
+
+      <!-- Facebook -->
+      <a class="facebook" href="https://facebook.com/didar.xyz" target="_blank" aria-label="Facebook">
+        <svg class="icon" viewBox="0 0 24 24">
+          <path d="M22 12a10 10 0 1 0-11.6 9.9v-7h-2v-3h2V9.6c0-2 1.2-3.1 3-3.1.9 0 1.8.2 1.8.2v2h-1c-1 0-1.3.6-1.3 1.2V12h2.3l-.4 3h-1.9v7A10 10 0 0 0 22 12z"/>
+        </svg>
+      </a>
+
+      <!-- Instagram -->
+      <a class="instagram" href="https://instagram.com/didar.xyz" target="_blank" aria-label="Instagram">
+        <svg class="icon" viewBox="0 0 24 24">
+          <defs>
+            <linearGradient id="ig-gradient" x1="0%" y1="0%" x2="100%" y2="100%">
+              <stop offset="0%" stop-color="#f58529"/>
+              <stop offset="50%" stop-color="#dd2a7b"/>
+              <stop offset="100%" stop-color="#515bd4"/>
+            </linearGradient>
+          </defs>
+          <path d="M12 2.2c3.2 0 3.6 0 4.9.1 1.2.1 1.9.3 2.3.5.6.2 1 .5 1.4.9.4.4.7.8.9 1.4.2.4.4 1.1.5 2.3.1 1.3.1 1.7.1 4.9s0 3.6-.1 4.9c-.1 1.2-.3 1.9-.5 2.3-.2.6-.5 1-.9 1.4-.4.4-.8.7-1.4.9-.4.2-1.1.4-2.3.5-1.3.1-1.7.1-4.9.1s-3.6 0-4.9-.1c-1.2-.1-1.9-.3-2.3-.5-.6-.2-1-.5-1.4-.9-.4-.4-.7-.8-.9-1.4-.2-.4-.4-1.1-.5-2.3-.1-1.3-.1-1.7-.1-4.9s0-3.6.1-4.9c.1-1.2.3-1.9.5-2.3.2-.6.5-1 .9-1.4.4-.4.8-.7 1.4-.9.4-.2 1.1-.4 2.3-.5C8.4 2.2 8.8 2.2 12 2.2z"/>
+        </svg>
+      </a>
+
+      <!-- LinkedIn -->
+      <a class="linkedin" href="https://linkedin.com/in/abdidar" target="_blank" aria-label="LinkedIn">
+        <svg class="icon" viewBox="0 0 24 24">
+          <path d="M4.98 3.5A2.5 2.5 0 1 0 5 8.5a2.5 2.5 0 0 0-.02-5zM3 9h4v12H3zM9 9h3.8v1.6h.1c.5-.9 1.8-1.9 3.7-1.9 4 0 4.7 2.6 4.7 6V21h-4v-5.3c0-1.3 0-3-1.9-3s-2.2 1.4-2.2 2.9V21H9z"/>
+        </svg>
+      </a>
+    </div>
+
+  </div>
+
 </body>
 </html>
