--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
       padding: 2.75rem 2.2rem;
       max-width: 420px;
       width: 100%;
-      background: transparent;
+      background: rgba(20, 20, 20, 0.4);
+      backdrop-filter: blur(10px);
+      border-radius: 20px;
+      border: 1px solid rgba(255, 255, 255, 0.05);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
       animation: enter 0.9s ease-out both;
     }
 
@@ -55,7 +59,8 @@
       border-radius: 50%;
       object-fit: cover;
       margin-bottom: 1.3rem;
-      border: 2px solid #222;
+      border: 3px solid #333;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
       animation: breathe 6s ease-in-out infinite;
     }
 
@@ -93,8 +98,8 @@
     }
 
     .icon {
-      width: 28px;
-      height: 28px;
+      width: 32px;
+      height: 32px;
       fill: #b5b5b5;
       transition:
         fill 0.25s ease,
@@ -117,8 +122,24 @@
     .facebook:hover .icon { fill: #1877f2; }
     .linkedin:hover .icon { fill: #0a66c2; }
 
-    .instagram:hover .icon {
-      fill: url(#ig-gradient);
+    /* Instagram specific styles */
+    .instagram-icon {
+      stroke: #b5b5b5;
+      fill: none;
+      transition:
+        stroke 0.25s ease,
+        transform 0.25s ease,
+        filter 0.25s ease;
+    }
+
+    .instagram:hover .instagram-icon {
+      stroke: #e4405f;
+      transform: translateY(-3px) scale(1.05);
+      filter: drop-shadow(0 4px 10px rgba(0,0,0,0.4));
+    }
+
+    .instagram:active .instagram-icon {
+      transform: translateY(-1px) scale(0.97);
     }
 
     footer {
@@ -167,15 +188,10 @@
 
       <!-- Instagram -->
       <a class="instagram" href="https://instagram.com/didar.xyz" target="_blank" aria-label="Instagram">
-        <svg class="icon" viewBox="0 0 24 24">
-          <defs>
-            <linearGradient id="ig-gradient" x1="0%" y1="0%" x2="100%" y2="100%">
-              <stop offset="0%" stop-color="#f58529"/>
-              <stop offset="50%" stop-color="#dd2a7b"/>
-              <stop offset="100%" stop-color="#515bd4"/>
-            </linearGradient>
-          </defs>
-          <path d="M12 2.2c3.2 0 3.6 0 4.9.1 1.2.1 1.9.3 2.3.5.6.2 1 .5 1.4.9.4.4.7.8.9 1.4.2.4.4 1.1.5 2.3.1 1.3.1 1.7.1 4.9s0 3.6-.1 4.9c-.1 1.2-.3 1.9-.5 2.3-.2.6-.5 1-.9 1.4-.4.4-.8.7-1.4.9-.4.2-1.1.4-2.3.5-1.3.1-1.7.1-4.9.1s-3.6 0-4.9-.1c-1.2-.1-1.9-.3-2.3-.5-.6-.2-1-.5-1.4-.9-.4-.4-.7-.8-.9-1.4-.2-.4-.4-1.1-.5-2.3-.1-1.3-.1-1.7-.1-4.9s0-3.6.1-4.9c.1-1.2.3-1.9.5-2.3.2-.6.5-1 .9-1.4.4-.4.8-.7 1.4-.9.4-.2 1.1-.4 2.3-.5C8.4 2.2 8.8 2.2 12 2.2z"/>
+        <svg class="instagram-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <rect x="2" y="2" width="20" height="20" rx="5" ry="5"/>
+          <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/>
+          <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/>
         </svg>
       </a>
 
